--- a/Day 5/main.ipynb
+++ b/Day 5/main.ipynb
@@ -52,6 +52,7 @@
     "        for move in moves:\n",
     "            for i in range(int(move[0])):\n",
     "                el = stacks[int(move[1]) - 1].pop()\n",
+    "                print(i)\n",
     "                stacks[int(move[2]) - 1].append(el)\n",
     "        return ''.join([stacks[i].pop() for i in range(stackNumber)])\n",
     "            "
